--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.26.0
-PyPDF2==3.0.1
-beautifulsoup4==4.12.2
-gTTS==2.3.2
-pygame==2.5.0
+streamlit
+PyPDF2
+beautifulsoup4
+gTTS
+pygame
